objects/Onsite_Inspection__c.object
<CustomObject>
    <fields>
        <fullName>Inspection_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inspection Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Onsite Inspections</relationshipLabel>
        <relationshipName>Onsite_Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Onsite_Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Onsite Inspection</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Onsite Inspection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onsite Inspections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>